--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 :root {
     --bg-accent: #d6f8f8;
-    --spacing: 0.5rem;
+    --site-spacing: 0.5rem;
 }
 
 .site {
@@ -9,6 +9,8 @@
     grid-template-rows: auto auto 1fr auto;
     height: 100vh;
     grid-gap: 1rem;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .simple.site {
@@ -18,6 +20,9 @@
 .header {
     grid-row: 1 / 2;
     background-color: var(--bg-accent);
+    position: sticky;
+    top: 0;
+    z-index: 40;
 }
 
 .title {
@@ -27,9 +32,10 @@
 .content {
     grid-row: 3 / 4;
     display: grid;
-    grid-template-columns: minmax(529px, 1fr) 400px;
+    grid-template-columns: minmax(0, 1fr) 400px;
     grid-auto-flow: column;
-    gap: calc(var(--spacing) * 3);
+    gap: calc(var(--site-spacing) * 3);
+    max-width: 100%;
 }
 
 .simple .content {
@@ -69,7 +75,7 @@
 
 .list-container {
     display: grid;
-    grid-gap: var(--spacing);
+    grid-gap: var(--site-spacing);
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
